--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -7,9 +7,7 @@ body{
 li{
     list-style:none;
 }
-html{
-    cursor:pointer;
-}
+
 .title-headers{
     font-size:3.5em;
     margin-top:2.5%;
@@ -62,7 +60,7 @@ sighting-lable{
     color:#fff;
     border-top-left-radius: 10% 50%;
     border-bottom-left-radius: 10% 50%;
-    padding-bottom:50px;
+    padding-bottom:60px;
     box-shadow: 10px 10px 5px grey;
 
 }
@@ -78,7 +76,7 @@ sighting-lable{
     text-shadow: 2px 2px 5px grey;
     }
 .location-button{
-    margin-top: 0.5em;
+    margin-top: 1em;
     margin-right: 0.75em;
     border solid 3px #FFF;
     padding 0.5em;
@@ -86,8 +84,8 @@ sighting-lable{
     background:#FFF;
     border-top-left-radius: 10% 50%;
     border-bottom-left-radius: 10% 50%;
-    border-top-right-radius: 10% 50%;
-    border-bottom-right-radius: 10% 50%;
+
+
     float:right;
     box-shadow: 5px 5px 5px rgb(139,0,0);
 }
@@ -134,14 +132,18 @@ a:link,a:visited{
     text-decoration:none;
     color:white;
 }
+.power{
+ box-shadow: 5px 5px 5px grey;
+ background-color: rgb(22, 44, 162);
+}
 .power, .editing {
     border-radius: 16px;
     padding: 5px;
     text-align: center;
-    background-color: rgb(22, 44, 162);
+
     margin:10px;
     color: #FFF;
-    box-shadow: 5px 5px 5px grey;
+
 
 }
 .navigation{
@@ -212,9 +214,7 @@ a:link,a:visited{
 
 
 }
-.headingTitle:hover{
-    margin-left:30px;
-}
+
 .sighting-ticker:hover{
     display:block;
     background:  rgba(195, 29, 16,1);
@@ -236,7 +236,7 @@ a:link,a:visited{
 }
 .headingTitle{
     letter-spacing:2px;
-    font-size:3em;
+    font-size:2em;
     padding: .75em 1em;
 }
 /**
@@ -269,6 +269,193 @@ a:link,a:visited{
 }
 
 
+
+
+@media(max-width:600px){
+
+    .headingTitle{
+        font-size:1em;
+    }
+    .page-sub-title{
+        text-align:center;
+        font-size:1.5em;
+        margin-top:2em;
+        margin-bottom 2em;
+    }
+    .form-title{
+        font-size:1em;
+        text-align:center;
+    }
+    .navigation-bar{
+    margin: 0px;
+    padding: 0;
+    }
+
+
+
+
+    .color-overlay{
+        width:100%;
+        height:100%;
+        /*
+        background: #1849CA;
+        */
+        background:rgba(0,0,0,0.9);
+        opacity:0.7;
+        position:absolute;
+        top:0;
+        left:0;
+    }
+    .color-overlay-pages{
+
+        width:100%;
+        min-height:100%;
+        background:rgba(0,0,0,0.9);
+        opacity:0.7;
+        position:fixed;
+        top:0;
+        left:0;
+        z-index:-10;
+    }
+    .navigation-tabs{
+        text-align:center;
+        margin-bottom: 5px;
+        padding: 5px;
+    }
+
+    .title-headers {
+        text-align:center;
+        font-size: 2em;
+        margin-top: 10%;
+        margin-bottom: 10%;
+    }
+    .alter-buttons {
+        text-align:center;
+
+    }
+}
+
+
+@media(min-width:600px){
+    li a{
+        font-size: 1.2em;
+    }
+    .power{
+        font-size:1em;
+    }
+    .editing{
+        font-size:1.4em;
+    }
+    .headingTitle{
+            font-size:2.5em;
+        }
+        .page-sub-title{
+            text-align:center;
+            font-size:2.5em;
+            margin-top:2em;
+            margin-bottom: 1em;
+        }
+        .form-title{
+            font-size:1.5em;
+            text-align:center;
+        }
+        .navigation-bar{
+        margin: 0px;
+        padding: 0;
+        }
+
+
+        .color-overlay{
+            width:100%;
+            height:100%;
+            /*
+            background: #1849CA;
+            */
+            background:rgba(0,0,0,0.9);
+            opacity:0.7;
+            position:absolute;
+            top:0;
+            left:0;
+        }
+        .color-overlay-pages{
+
+            width:100%;
+            min-height:100%;
+            background:rgba(0,0,0,0.9);
+            opacity:0.7;
+            position:fixed;
+            top:0;
+            left:0;
+            z-index:-10;
+        }
+        .navigation-tabs{
+            text-align:center;
+            margin-bottom: 5px;
+            padding: 5px;
+        }
+
+        .title-headers {
+            text-align:center;
+            font-size: 2.5em;
+            margin-top: 10%;
+            margin-bottom: 10%;
+        }
+        .alter-buttons {
+            text-align:center;
+
+        }
+}
+
+@media(min-width:768px){
+
+.form-background{
+        margin: auto;
+        margin-top:5%;
+        padding-top:15px;
+        width: 96%;
+        background: rgb(195, 29, 16);
+        border:4px;
+        color:#fff;
+        border-top-left-radius: 10% 50%;
+        border-bottom-left-radius: 10% 50%;
+        padding-bottom:100px;
+        box-shadow: 10px 10px 5px grey;
+}
+.location-button{
+    margin-top: 1em;
+    margin-right: 0.75em;
+    border solid 3px #FFF;
+    padding: 1em;
+    color:rgb(195, 29, 16);
+    background:#FFF;
+    border-top-left-radius: 10% 50%;
+    border-bottom-left-radius: 10% 50%;
+
+
+    float:right;
+    box-shadow: 5px 5px 5px rgb(139,0,0);
+}
+ .title-headers {
+            text-align:center;
+            font-size: 3em;
+            margin-top: 5%;
+            margin-bottom: 5%;
+        }
+}
+
+
+@media only screen and (min-width: 992px){
+    .page-sub-title{
+        margin-top:1em;
+    }
+    li a {
+        font-size: 1em;
+    }
+
+    .editing{
+        font-size:1em;
+    }
+}
 
 
 
